# chatServer

./: CMakeLists.txt  README.md
include/: Public.h
include/server/: ChatServer.h  ChatService.h
include/server/db/: db.h
include/server/model/: FriendModel.h  Group.h  GroupModel.h  GroupUser.h  OfflineMessageModel.h  User.h  UserModel.h
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  ChatServer.cpp  ChatService.cpp  main.cpp  userModel.cpp
src/server/db/: db.cpp
src/server/model/: FriendModel.cpp  Group.cpp  GroupModel.cpp  OfflineMessageModel.cpp  User.cpp
